--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "element-plus": "^2.3.9",
+    "ng-form-element": "^2.1.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vue3-draggable-resizable": "^1.6.5",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
