--- a/package.json
+++ b/package.json
@@ -8,12 +8,21 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
+    "@ikilote/json2html": "^0.4.2",
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "element-plus": "^2.3.9",
+    "from-json-to-html": "^1.0.1",
+    "html2json": "^1.0.2",
+    "json2htable": "^1.0.0",
+    "json2html": "0.0.8",
+    "json2html.js": "^1.0.3",
     "ng-form-element": "^2.1.0",
     "ng-form-elementplus": "^2.0.2",
+    "node-json2html": "^2.2.3",
+    "o_json_to_html": "^1.0.9",
     "vue": "^3.2.13",
+    "vue-json-to-html": "^0.1.12",
     "vue-router": "^4.0.3",
     "vue3-draggable-resizable": "^1.6.5",
     "vuex": "^4.0.0"
