--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.8.3",
     "element-plus": "^2.3.9",
     "from-json-to-html": "^1.0.1",
+    "html2canvas": "^1.4.1",
     "html2json": "^1.0.2",
     "json2htable": "^1.0.0",
     "json2html": "0.0.8",
