20230829 2233 pluto 已完成聊天室群聊部分所有功能，包括未读消息，前端缓存历史记录等

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "json2html.js": "^1.0.3",
     "ng-form-element": "^2.1.0",
     "ng-form-elementplus": "^2.0.2",
+    "node-json2html": "^2.2.3",
     "vditor": "^3.9.4",
     "vue": "^3.2.13",
     "vue-json-to-html": "^0.1.12",
