--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "ng-form-element": "^2.1.0",
     "ng-form-elementplus": "^2.0.2",
     "node-json2html": "^2.2.3",
+    "tributejs": "^5.1.3",
     "vditor": "^3.9.4",
     "vue": "^3.2.13",
     "vue-json-to-html": "^0.1.12",
+    "vue-plugin-hiprint": "0.0.54-fix",
     "vue-router": "^4.0.3",
     "vue3-draggable-resizable": "^1.6.5",
     "vuex": "^4.0.0"
