--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@tiptap/extension-collaboration": "^2.1.7",
     "@tiptap/extension-collaboration-cursor": "^2.1.7",
     "@tiptap/extension-highlight": "^2.1.7",
+    "@tiptap/extension-mention": "^2.1.7",
     "@tiptap/extension-task-item": "^2.1.7",
     "@tiptap/extension-task-list": "^2.1.7",
     "@tiptap/pm": "^2.1.7",
     "@tiptap/starter-kit": "^2.1.7",
+    "@tiptap/suggestion": "^2.1.7",
     "@tiptap/vue-3": "^2.1.7",
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
