--- a/package.json
+++ b/package.json
@@ -24,12 +24,16 @@
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "element-plus": "^2.3.9",
+    "file-saver": "^2.0.5",
     "from-json-to-html": "^1.0.1",
+    "html-docx": "^1.2.0",
+    "html-docx-js": "^0.3.1",
     "html2canvas": "^1.4.1",
     "html2json": "^1.0.2",
     "json2htable": "^1.0.0",
     "json2html": "0.0.8",
     "json2html.js": "^1.0.3",
+    "mhtml-to-word": "^1.0.4",
     "ng-form-element": "^2.1.0",
     "ng-form-elementplus": "^2.0.2",
     "node-json2html": "^2.2.3",
